[package]
name = "stages"
version = "0.1.0"
authors = ["gluax <jonathan.t.pavlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0"

[dependencies.clap]
version = "2.33.3"

[dependencies.leo-asg]
path = "../asg"
version = "1.2.3"

[dependencies.leo-ast]
path = "../ast"
version = "1.2.3"

[dependencies.leo-compiler]
path = "../compiler"
version = "1.2.3"

[dependencies.leo-imports]
path = "../imports"
version = "1.2.3"

[dependencies.leo-parser]
path = "../parser"
version = "1.2.3"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"